[gd_scene load_steps=19 format=3 uid="uid://bfhjvru3xr23t"]

[ext_resource type="Script" uid="uid://vjntoqdvpyq4" path="res://scripts/main_game_item/scary_pot.gd" id="1_2g0nn"]
[ext_resource type="Texture2D" uid="uid://b0auincp5bpjd" path="res://assets/reanim/Pot_shadow.png" id="2_a1fya"]
[ext_resource type="Script" uid="uid://bs7urpivxb6y3" path="res://scripts/main_game_item/pot_hammer.gd" id="3_2pkp7"]
[ext_resource type="Texture2D" uid="uid://bqtnl31pv3rv3" path="res://assets/reanim/Hammer_3.png" id="3_fdtnj"]
[ext_resource type="Texture2D" uid="uid://xfrujdpqgur8" path="res://assets/image/main_game_item/Scary_Pot.png" id="3_k72xk"]
[ext_resource type="Texture2D" uid="uid://qtifu6lsmq6x" path="res://assets/reanim/hammer_1.png" id="4_2pkp7"]
[ext_resource type="Texture2D" uid="uid://ok2l7mfg4lev" path="res://assets/reanim/Zombie_whitewater1.png" id="4_s4w65"]
[ext_resource type="Texture2D" uid="uid://dweon5ml8otw5" path="res://assets/reanim/Hammer_2.png" id="5_1sl10"]
[ext_resource type="Animation" uid="uid://cf18nflpwmmfk" path="res://animation/item/Hammer/Hammer_whack_zombie.tres" id="6_sceda"]
[ext_resource type="Script" uid="uid://coukntwen7m10" path="res://scripts/main_game_item/pot_all_vase_chunks.gd" id="8_sceda"]
[ext_resource type="Texture2D" uid="uid://dfkdenftlvtmb" path="res://assets/image/particles/vase_chunks.png" id="9_umv2f"]
[ext_resource type="Script" uid="uid://bmw4ymnv7xcca" path="res://scripts/main_game_item/pot_vase_chunks.gd" id="10_umv2f"]
[ext_resource type="Texture2D" uid="uid://yiqb02oqfffo" path="res://assets/reanim/Zombie_whitewater3.png" id="13_k72xk"]
[ext_resource type="Texture2D" uid="uid://bm64d7w74w4rj" path="res://assets/reanim/Zombie_whitewater2.png" id="14_1e14j"]

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3meaf"]
_data = {
&"Hammer_whack_zombie": ExtResource("6_sceda")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a1fya"]
size = Vector2(66, 98)

[sub_resource type="Animation" id="Animation_q7xq1"]
resource_name = "new_animation"
length = 3.416675
loop_mode = 1
step = 0.083333336
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Zombie_whitewater:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333, 0.5, 0.666667, 0.833333, 0.916667, 1, 1.166667, 1.333333, 1.5, 1.666667, 1.833333, 2, 2.166667, 2.333333, 2.5, 2.666667, 2.833333, 2.916667, 3, 3.166667, 3.333333, 3.416667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [ExtResource("4_s4w65"), ExtResource("13_k72xk"), ExtResource("4_s4w65"), ExtResource("4_s4w65"), ExtResource("13_k72xk"), ExtResource("14_1e14j"), ExtResource("13_k72xk"), ExtResource("13_k72xk"), ExtResource("14_1e14j"), ExtResource("4_s4w65"), ExtResource("13_k72xk"), ExtResource("14_1e14j"), ExtResource("4_s4w65"), ExtResource("4_s4w65"), ExtResource("13_k72xk"), ExtResource("4_s4w65"), ExtResource("4_s4w65"), ExtResource("13_k72xk"), ExtResource("14_1e14j"), ExtResource("13_k72xk"), ExtResource("13_k72xk"), ExtResource("14_1e14j"), ExtResource("4_s4w65"), ExtResource("4_s4w65")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5adi"]
_data = {
&"water_animation": SubResource("Animation_q7xq1")
}

[node name="ScaryPot" type="Node2D"]
script = ExtResource("1_2g0nn")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -15.000001)
scale = Vector2(0.8561644, 0.8061224)
texture = ExtResource("2_a1fya")

[node name="Body" type="Node2D" parent="."]

[node name="ScaryPotBack" type="Sprite2D" parent="Body"]
position = Vector2(0, -50.5)
texture = ExtResource("3_k72xk")
hframes = 3
vframes = 2

[node name="CharacterContainer" type="Node2D" parent="Body"]
position = Vector2(0, -42)
scale = Vector2(1.4, 1.4)

[node name="ScaryPotFront" type="Sprite2D" parent="Body"]
position = Vector2(0, -50)
texture = ExtResource("3_k72xk")
hframes = 3
vframes = 2
frame = 3

[node name="Zombie_whitewater" type="Sprite2D" parent="Body"]
position = Vector2(-29, -26)
scale = Vector2(0.88888896, 0.8)
texture = ExtResource("4_s4w65")
centered = false

[node name="Marker2DCreateCardOrTrophy" type="Marker2D" parent="."]
position = Vector2(-23, -83)

[node name="Hammer" type="Node2D" parent="."]
visible = false
position = Vector2(20, -78.5)
script = ExtResource("3_2pkp7")

[node name="Body" type="Node2D" parent="Hammer"]
position = Vector2(-62, -11)

[node name="Hammer_3" type="Sprite2D" parent="Hammer/Body"]
position = Vector2(57.9, -19.3)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("3_fdtnj")
centered = false

[node name="Hammer_2" type="Sprite2D" parent="Hammer/Body"]
position = Vector2(74.6, -29.3)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("4_2pkp7")
centered = false

[node name="Hammer1" type="Sprite2D" parent="Hammer/Body"]
position = Vector2(65.3, 4.1)
rotation = 1.11527
scale = Vector2(0.797, 0.797)
texture = ExtResource("5_1sl10")
centered = false

[node name="HammerAnimationPlayer" type="AnimationPlayer" parent="Hammer"]
libraries = {
&"": SubResource("AnimationLibrary_3meaf")
}
speed_scale = 1.5

[node name="PotAllVaseChunks" type="Node2D" parent="."]
visible = false
position = Vector2(0, -14)
script = ExtResource("8_sceda")

[node name="VaseChunks" type="Sprite2D" parent="PotAllVaseChunks"]
position = Vector2(0, -55)
texture = ExtResource("9_umv2f")
hframes = 9
vframes = 3
script = ExtResource("10_umv2f")

[node name="Area2DDetect" type="Area2D" parent="."]
collision_layer = 2048
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DDetect"]
position = Vector2(0, -49)
shape = SubResource("RectangleShape2D_a1fya")

[node name="Area2DReal" type="Area2D" parent="."]
collision_layer = 4096
collision_mask = 0
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2DReal"]
position = Vector2(0, -49)
shape = SubResource("RectangleShape2D_a1fya")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_l5adi")
}
